--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "generate": "stencil generate"
   },
   "dependencies": {
-    "@ionic/core": "^4.9.1"
+    "@ionic/core": "^4.9.1",
+    "firebase": "^7.2.0"
   },
   "devDependencies": {
     "@stencil/core": "^1.5.2"
