--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "generate": "stencil generate"
   },
   "dependencies": {
+    "@capacitor/cli": "^1.2.1",
+    "@capacitor/core": "^1.2.1",
     "@ionic/core": "^4.9.1",
     "firebase": "^7.2.0"
   },
