--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@capacitor/cli": "^1.2.1",
     "@capacitor/core": "^1.2.1",
     "@ionic/core": "^4.9.1",
-    "firebase": "^7.2.0"
+    "firebase": "^7.2.0",
+    "firebaseui": "^4.2.0"
   },
   "devDependencies": {
     "@stencil/core": "^1.5.2"
