--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@capacitor/ios": "^1.3.0",
     "@ionic/core": "^4.9.1",
     "firebase": "^7.2.2",
-    "firebaseui": "^4.2.0"
+    "firebaseui": "^4.2.0",
+    "googleapis": "^39.2.0"
   },
   "devDependencies": {
     "@stencil/core": "^1.5.2"
